<resources>
    <string name="app_name">Jeg har aldrig Spillet</string>
    <string name="welcome">Velkommen!</string>
    <string name="description">Det klassiske Jeg har aldrig er altid en god måde at få startet festen på. Saml alle dine venner og lad spillet føre vejen. Send telefonen rundt, læs udsagnet højt og tag et shot, hvis du har udført den handling der er blevet læst højt. Arbejd dig gennem kategorier som forhold, skole eller noget lidt mere frækt….</string>
    <string name="description_2">Saml alle dine venner og lad spillet føre vejen. Send telefonen rundt, læs udsagnet højt og tag et shot, hvis du har udført den handling der er blevet læst højt. Arbejd dig gennem kategorier som arbejde, forhold, skole eller noget lidt mere frækt...</string>
    <string name="next">NÆSTE</string>
    <string name="mode">Vælg en kategori</string>
    <string name="kat_1">Frækt &amp; Sex</string>
    <string name="kat_2">Forhold</string>
    <string name="kat_3">Skole</string>
    <string name="kat_4">Druk</string>
    <string name="kat_5">Arbejde</string>
    <string name="kat_6">loven</string>
    <string name="kat_7">Tilfældigt Spil</string>
    <string name="tutorial_button">?</string>
    <string name="remove_ads_button">Fjern Reklamer</string>
    <string name="game_text">Jeg Har Aldrig...</string>
    <string name="next_button">Næste</string>
    <string name="quit_button">Afslut</string>
    <string name="start_text">Tryk næste når du er klar til at starte spillet.</string>
</resources>